@@ -17,6 +17,7 @@ Module::Util = 0.016
 
 [Prereqs / TestRequires]
 Test::Simple = 1.302177
+Test::Script = 1.29
 
 [GitHubREADME::Badge]
 badges = github_actions/test
