@@ -1,6 +1,8 @@
 Revision history for Open-This
 
 {{$NEXT}}
+    - Override $ENV{EDITOR} via -e|--editor (GH#40) (Olaf Alders)
+    - Avoid invoking an editor via -p|--print (GH#40) (Olaf Alders)
 
 0.000025  2021-08-17 19:33:19Z
     - Move Test::Simple to test requires from runtime requires (GH#38) (Olaf
@@ -90,4 +92,4 @@ Revision history for Open-This
     - Pod formatting
 
 0.000001  2018-02-06 16:14:35Z
-    - Initial release.
+    - initial release.
